# ChangeLog for app-text/sphinxcontrib-httpdomain
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.6.ebuild:
  Switched to python-distutils-ng eclass.

  19 Mar 2012; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.6.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.6.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  20 Jan 2012; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-httpdomain-1.1.5.ebuild,
  sphinxcontrib-httpdomain-1.1.6.ebuild:
  Keyworded x86.

  20 Jan 2012; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.6.ebuild:
  Keyworded amd64.

*sphinxcontrib-httpdomain-1.1.6 (21 Dec 2011)

  21 Dec 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-httpdomain-1.1.6.ebuild:
  Version bump [513].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  08 Aug 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-httpdomain-1.1.4.ebuild,
  sphinxcontrib-httpdomain-1.1.5.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.5.ebuild:
  Keyworded amd64.

  24 Jul 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-httpdomain-1.1.2.ebuild,
  sphinxcontrib-httpdomain-1.1.4.ebuild:
  Keyworded x86.

  24 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.4.ebuild:
  Keyworded amd64.

*sphinxcontrib-httpdomain-1.1.5 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com>
  +sphinxcontrib-httpdomain-1.1.5.ebuild:
  Version bump [429].

  07 Jul 2011; James Rowe <jnrowe@gmail.com>
  -sphinxcontrib-httpdomain-1.0.ebuild, sphinxcontrib-httpdomain-1.1.2.ebuild:
  Keyworded x86.

  07 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.1.2.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com>
  sphinxcontrib-httpdomain-1.0.ebuild:
  Keyworded amd64.
